--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+* {
+  --primary-color: #f8c461;
+  --darkerPrimary-color: #e5a257;
+  --secondary-color: #6195f8;
+  --darkerSecondary-color: #858fa3;
+  --bookmarkbg-color: #fad287;
+  --white-color: #FFFFFF;
+  --dark-color: #565656;
+  --overlay-color: #58575773;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .App {
-  text-align: center;
+  background-image: url('../public/blob-scene-haikei.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 600px;
+  height: 550px;
+  display: grid;
+  place-content: center;
+  justify-items: center;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Button {
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  border-radius: 5px;
+  width: 260px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  transition: box-shadow 100ms ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Button:hover {
+  box-shadow: 0px 5px 15px -1px #222222;
 }
